@@ -1,9 +1,6 @@
 package de.factoryfx.data.storage.filesystem;
 
-import static java.nio.file.Files.readAllBytes;
-
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -72,7 +69,7 @@ public class FileSystemFactoryStorageHistory<R extends Data,S> {
 
     private String readFile(Path path){
         try {
-            return new String(readAllBytes(path), StandardCharsets.UTF_8);
+            return Files.readString(path);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -80,7 +77,7 @@ public class FileSystemFactoryStorageHistory<R extends Data,S> {
 
     private void writeFile(Path path, String content){
         try {
-            Files.write(path,content.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(path,content);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
